--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.custom-table .ant-table {
+  border: 1px solid black !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Add border to table rows */
+.custom-table .ant-table-row {
+  border: 1px solid black!important;
+}
+
+.custom-table .ant-table-cell {
+  border: none !important;
+  border-bottom: 1px solid black !important;
+}
+
+.custom-summary-row  {
+  border: 1px solid black !important;
+}
+.recharts-legend-wrapper{
+  padding-left: 220px;
+}
+
+.overlay {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.modal {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.modal h1 {
+  font-size: 24px;
+  color: #333;
+}
+
+.modal .icon {
+  font-size: 50px;
+  color: #08c;
 }
